# Papyrus_structure_pipeline

./: .flake8  LICENSE  README.md  readthedocs.yml  setup.cfg  tox.ini  travis.yml
src/papyrus_structure_pipeline/: __init__.py  standardizer.py
tests/: __init__.py  constants.py  test_standardizer.py
