[metadata]
name = papyrus_structure_pipeline
version = attr: papyrus_structure_pipeline.__version__
description = Papyrus Structure Pipeline
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/OlivierBeq/Papyrus_structure_pipeline

author = Olivier J. M. Béquignon
author_email = "olivier.bequignon.maintainer@gmail.com"
maintainer = Olivier J. M. Béquignon
maintainer_email = "olivier.bequignon.maintainer@gmail.com"

license_files =
    LICENSE

classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6

keywords =
    cheminformatics
    molecule
    standardization

[options]
include_package_data = True
packages = find:
package_dir = 
    = src
install_requires =
    rdkit
    chembl-structure-pipeline

[options.packages.find]
where = src

[options.package_data]
prodec = *.json

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints

testing =
    pytest